@@ -1,12 +1,12 @@
 # --
 # Kernel/System/LinkObject.pm - to link objects
-# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: LinkObject.pm,v 1.14 2007-01-20 23:11:34 mh Exp $
+# $Id: LinkObject.pm,v 1.14.2.1 2008-03-20 22:52:32 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 
 package Kernel::System::LinkObject;
@@ -14,7 +14,7 @@ package Kernel::System::LinkObject;
 use strict;
 
 use vars qw(@ISA $VERSION);
-$VERSION = '$Revision: 1.14 $';
+$VERSION = '$Revision: 1.14.2.1 $';
 $VERSION =~ s/^\$.*:\W(.*)\W.+?$/$1/;
 
 =head1 NAME
@@ -190,6 +190,14 @@ sub UnlinkObject {
             return;
         }
     }
+    my $SQLExt = '';
+    if ( $Param{LinkType} eq 'Parent' || $Param{LinkType} eq 'Child' ) {
+        $SQLExt = "object_link_type IN ('Parent', 'Child')";
+    }
+    else {
+        $SQLExt = "object_link_type = '$Param{LinkType}'";
+    }
+
     my $SQL = "DELETE FROM object_link WHERE ".
         " (object_link_a_id = '$Param{LinkID1}' ".
         " AND ".
@@ -199,7 +207,7 @@ sub UnlinkObject {
         " AND ".
         " object_link_b_object = '$Param{LinkObject2}' ".
         " AND ".
-        " object_link_type = '$Param{LinkType}') ".
+        " $SQLExt) ".
         " OR ".
         " (object_link_a_id = '$Param{LinkID2}' ".
         " AND ".
@@ -209,7 +217,7 @@ sub UnlinkObject {
         " AND ".
         " object_link_b_object = '$Param{LinkObject1}' ".
         " AND ".
-        " object_link_type = '$Param{LinkType}') ";
+        " $SQLExt) ";
 
     if ($Self->{DBObject}->Do(SQL => $SQL)) {
         $Self->BackendUnlinkObject(%Param);
@@ -415,12 +423,12 @@ This software is part of the OTRS project (http://otrs.org/).
 
 This software comes with ABSOLUTELY NO WARRANTY. For details, see
 the enclosed file COPYING for license information (GPL). If you
-did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
+did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 
 =cut
 
 =head1 VERSION
 
-$Revision: 1.14 $ $Date: 2007-01-20 23:11:34 $
+$Revision: 1.14.2.1 $ $Date: 2008-03-20 22:52:32 $
 
 =cut
